--- a/html/hola-mundo.html
+++ b/html/hola-mundo.html
@@ -488,7 +488,7 @@
             <div class="bg-gray-900 rounded-lg overflow-hidden">
               <div class="bg-gray-800 px-4 py-2 text-gray-300 text-sm flex justify-between items-center">
                 <span>📄 index.html</span>
-                <button onclick="copyCode()"
+                <button onclick="copyCode(event)"
                   class="bg-blue-600 text-white px-3 py-1 rounded text-xs hover:bg-blue-700 transition-colors">
                   📋 Copiar
                 </button>
@@ -616,7 +616,7 @@
       element.scrollIntoView({ behavior: 'smooth', block: 'center' });
     }
 
-    function copyCode() {
+    function copyCode(event) {
       const codeElement = document.getElementById('fullCode');
       const textContent = codeElement.textContent;
 
