--- a/html/origen-html.html
+++ b/html/origen-html.html
@@ -236,18 +236,18 @@
   <footer class="mt-16">
     <div class="max-w-6xl mx-auto px-4">
       <div class="bg-white rounded-xl shadow-xl p-6">
-        <div class="flex flex-col sm:flex-row justify-between items-stretch sm:items-center gap-4">
-          <div class="bg-gray-300 text-gray-500 px-6 py-3 rounded-lg opacity-50 flex-1 text-center">
+        <div class="flex flex-col gap-4 sm:flex-row sm:justify-between sm:items-center">
+          <div class="bg-gray-300 text-gray-500 px-6 py-3 rounded-lg opacity-50 flex items-center justify-center">
             ← (Primer tema)
           </div>
 
           <a href="../index.html"
-            class="bg-gray-500 text-white px-6 py-3 rounded-lg hover:bg-gray-600 transition-colors flex-1 text-center">
+            class="bg-gray-500 text-white px-6 py-3 rounded-lg hover:bg-gray-600 transition-colors flex text-center">
             🏠 Menú Principal
           </a>
 
           <a href="porque-html.html"
-            class="bg-red-500 text-white px-6 py-3 rounded-lg hover:bg-red-600 transition-colors flex items-center justify-center flex-1 text-center">
+            class="bg-red-500 text-white px-6 py-3 rounded-lg hover:bg-red-600 transition-colors flex items-center justify-center">
             ¿Por qué HTML? →
           </a>
         </div>
