--- a/css/formas-aplicar-css.html
+++ b/css/formas-aplicar-css.html
@@ -186,15 +186,13 @@
           <div>
             <h3 class="text-lg font-semibold text-gray-800 mb-3">Resultado Visual:</h3>
             <div class="bg-gray-100 p-4 rounded-lg">
-              <h1 style="color: red; font-size: 32px; margin: 0 0 10px 0;">
-                Título Rojo
+              <h1 class="text-red-600 text-3xl font-bold mb-2">
+              Título Rojo
               </h1>
-              </h1>
-              <p style="background-color: yellow; padding: 10px; margin: 0 0 10px 0;">
-                Párrafo con fondo amarillo
+              <p class="bg-yellow-300 p-2 mb-2 rounded">
+              Párrafo con fondo amarillo
               </p>
-              <div style="width: 200px; height: 100px; background-color: blue; margin: 0;">
-              </div>
+              <div class="w-52 h-24 bg-blue-600 rounded"></div>
             </div>
           </div>
         </div>
@@ -283,20 +281,20 @@
 </pre>
           </div>
 
-          <div>
+            <div>
             <h3 class="text-lg font-semibold text-gray-800 mb-3">Resultado Visual:</h3>
-            <div class="bg-gray-200 p-4 rounded-lg" style="font-family: Arial, sans-serif;">
-              <h1 style="color: navy; text-align: center; margin: 0 0 15px 0; font-size: 24px;">
-                Mi Título
+            <div class="bg-gray-200 p-4 rounded-lg font-sans">
+              <h1 class="text-blue-900 text-center m-0 mb-4 text-2xl font-bold">
+              Mi Título
               </h1>
-              <p style="background-color: yellow; padding: 15px; border-radius: 5px; margin: 0 0 15px 0;">
-                Párrafo destacado
+              <p class="bg-yellow-300 p-4 rounded mb-4">
+              Párrafo destacado
               </p>
-              <p style="color: red; font-weight: bold; margin: 0;">
-                Texto especial
+              <p class="text-red-600 font-bold m-0">
+              Texto especial
               </p>
             </div>
-          </div>
+            </div>
         </div>
 
         <div class="mt-6 grid md:grid-cols-2 gap-4">
@@ -403,17 +401,14 @@
 
             <h4 class="font-semibold mb-2 mt-4">3. Resultado:</h4>
             <div class="bg-gray-100 p-4 rounded-lg">
-              <div
-                style="background-color: #343a40; color: white; padding: 15px; text-align: center; border-radius: 8px; margin-bottom: 15px;">
-                <h1 style="margin: 0; font-size: 20px;">Bienvenido</h1>
+              <div class="bg-gray-800 text-white py-4 text-center rounded-lg mb-4">
+              <h1 class="m-0 text-xl font-bold">Bienvenido</h1>
               </div>
-              <div
-                style="background-color: white; padding: 15px; border-radius: 8px; box-shadow: 0 2px 4px rgba(0,0,0,0.1);">
-                <p style="margin: 0 0 10px 0;">Este es el contenido principal.</p>
-                <button
-                  style="background-color: #007bff; color: white; padding: 8px 16px; border: none; border-radius: 4px; cursor: pointer;">
-                  Hacer clic
-                </button>
+              <div class="bg-white p-4 rounded-lg shadow">
+              <p class="mb-2">Este es el contenido principal.</p>
+              <button class="bg-blue-600 hover:bg-blue-700 text-white px-4 py-2 rounded cursor-pointer">
+                Hacer clic
+              </button>
               </div>
             </div>
           </div>
