--- a/bootstrap/que-es-framework.html
+++ b/bootstrap/que-es-framework.html
@@ -25,7 +25,6 @@
         .typewriter {
             overflow: hidden;
             border-right: .15em solid #667eea;
-            white-space: nowrap;
             margin: 0 auto;
             animation: typewriter 3s steps(40, end);
         }
@@ -59,13 +58,13 @@
 
     <!-- Navigation -->
     <nav class="mb-8">
-        <div class="max-w-6xl mx-auto px-4 flex justify-between items-center">
+        <div class="max-w-6xl mx-auto px-4 flex flex-col gap-4 sm:flex-row sm:justify-between sm:items-center">
             <a href="../css/selectores-css.html"
-                class="bg-white text-purple-600 px-4 py-2 rounded-lg hover:bg-purple-50 transition-colors">
+                class="bg-white text-purple-600 px-4 py-2 rounded-lg hover:bg-purple-50 transition-colors text-center">
                 ← Selectores CSS
             </a>
             <a href="bootstrap-vs-tailwind.html"
-                class="bg-white text-purple-600 px-4 py-2 rounded-lg hover:bg-purple-50 transition-colors">
+                class="bg-white text-purple-600 px-4 py-2 rounded-lg hover:bg-purple-50 transition-colors text-center">
                 Bootstrap vs Tailwind →
             </a>
         </div>
@@ -106,8 +105,7 @@
             <!-- Características -->
             <div class="bg-white rounded-xl shadow-xl p-8 mb-8 fade-in-up">
                 <h2 class="text-3xl font-bold text-gray-800 mb-6 flex items-center">
-                    <span class="text-4xl mr-3">⭐</span>
-                    Características Principales
+                    ⭐Características Principales
                 </h2>
 
                 <div class="grid md:grid-cols-2 gap-6">
@@ -140,8 +138,7 @@
             <!-- Tipos de Frameworks -->
             <div class="bg-white rounded-xl shadow-xl p-8 mb-8 fade-in-up">
                 <h2 class="text-3xl font-bold text-gray-800 mb-6 flex items-center">
-                    <span class="text-4xl mr-3">🎯</span>
-                    Tipos de Frameworks CSS
+                    🎯Tipos de Frameworks CSS
                 </h2>
 
                 <div class="space-y-6">
@@ -187,36 +184,40 @@
                 <div class="grid md:grid-cols-2 gap-6">
                     <div>
                         <h3 class="text-xl font-bold text-gray-700 mb-3">Sin Framework</h3>
-                        <div class="code-block text-green-400 text-sm font-mono">
-                            <pre>.my-button {
-  background-color: #007bff;
-  border: none;
-  border-radius: 4px;
-  color: white;
-  padding: 8px 16px;
-  font-size: 14px;
-  cursor: pointer;
-  transition: all 0.3s;
-}
-.my-button:hover {
-  background-color: #0056b3;
-  transform: translateY(-1px);
-}</pre>
+                        <div class="code-block text-sm font-mono">
+                            <pre class="text-sm p-3 rounded overflow-x-auto break-words break-all whitespace-pre-wrap">
+<span class="text-[#f92672]">.my-button</span> <span class="text-white">{</span>
+    <span class="text-[#a6e22e]">background-color</span><span class="text-white">:</span> <span class="text-[#e6db74]">#007bff</span><span class="text-white">;</span>
+    <span class="text-[#a6e22e]">border</span><span class="text-white">:</span> <span class="text-[#e6db74]">none</span><span class="text-white">;</span>
+    <span class="text-[#a6e22e]">border-radius</span><span class="text-white">:</span> <span class="text-[#e6db74]">4px</span><span class="text-white">;</span>
+    <span class="text-[#a6e22e]">color</span><span class="text-white">:</span> <span class="text-[#e6db74]">white</span><span class="text-white">;</span>
+    <span class="text-[#a6e22e]">padding</span><span class="text-white">:</span> <span class="text-[#e6db74]">8px 16px</span><span class="text-white">;</span>
+    <span class="text-[#a6e22e]">font-size</span><span class="text-white">:</span> <span class="text-[#e6db74]">14px</span><span class="text-white">;</span>
+    <span class="text-[#a6e22e]">cursor</span><span class="text-white">:</span> <span class="text-[#e6db74]">pointer</span><span class="text-white">;</span>
+    <span class="text-[#a6e22e]">transition</span><span class="text-white">:</span> <span class="text-[#e6db74]">all 0.3s</span><span class="text-white">;</span>
+<span class="text-white">}</span>
+<span class="text-[#f92672]">.my-button:hover</span> <span class="text-white">{</span>
+    <span class="text-[#a6e22e]">background-color</span><span class="text-white">:</span> <span class="text-[#e6db74]">#0056b3</span><span class="text-white">;</span>
+    <span class="text-[#a6e22e]">transform</span><span class="text-white">:</span> <span class="text-[#e6db74]">translateY(-1px)</span><span class="text-white">;</span>
+<span class="text-white">}</span>
+</pre>
                         </div>
                     </div>
 
                     <div>
                         <h3 class="text-xl font-bold text-gray-700 mb-3">Con Framework</h3>
-                        <div class="code-block text-green-400 text-sm font-mono">
-                            <pre>&lt;!-- Bootstrap --&gt;
-&lt;button class="btn btn-primary"&gt;
-  Botón
-&lt;/button&gt;
+                        <div class="code-block text-sm font-mono">
+                            <pre class="text-sm p-3 rounded overflow-x-auto break-words break-all whitespace-pre-wrap">
+<span class="text-[#75715e]">&lt;!-- Bootstrap --&gt;</span>
+<span class="text-[#f92672]">&lt;button</span> <span class="text-[#a6e22e]">class</span>=<span class="text-[#e6db74]">"btn btn-primary"</span><span class="text-[#f92672]">&gt;</span>
+    <span class="text-white">Botón</span>
+<span class="text-[#f92672]">&lt;/button&gt;</span>
 
-&lt;!-- Tailwind --&gt;
-&lt;button class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600"&gt;
-  Botón
-&lt;/button&gt;</pre>
+<span class="text-[#75715e]">&lt;!-- Tailwind --&gt;</span>
+<span class="text-[#f92672]">&lt;button</span> <span class="text-[#a6e22e]">class</span>=<span class="text-[#e6db74]">"bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600"</span><span class="text-[#f92672]">&gt;</span>
+    <span class="text-white">Botón</span>
+<span class="text-[#f92672]">&lt;/button&gt;</span>
+    </pre>
                         </div>
                     </div>
                 </div>
@@ -225,8 +226,7 @@
             <!-- Cuándo usar -->
             <div class="bg-white rounded-xl shadow-xl p-8 mb-8 fade-in-up">
                 <h2 class="text-3xl font-bold text-gray-800 mb-6 flex items-center">
-                    <span class="text-4xl mr-3">🤔</span>
-                    ¿Cuándo usar un Framework CSS?
+                    🤔¿Cuándo usar un Framework CSS?
                 </h2>
 
                 <div class="grid md:grid-cols-2 gap-6">
@@ -263,19 +263,19 @@
     <footer class="mt-16">
         <div class="max-w-6xl mx-auto px-4">
             <div class="bg-white rounded-xl shadow-xl p-6">
-                <div class="flex justify-between items-center">
+                <div class="flex flex-col gap-4 sm:flex-row sm:justify-between sm:items-center">
                     <a href="../css/selectores-css.html"
-                        class="bg-purple-500 text-white px-6 py-3 rounded-lg hover:bg-purple-600 transition-colors flex items-center">
+                        class="bg-purple-500 text-white px-6 py-3 rounded-lg hover:bg-purple-600 transition-colors flex items-center justify-center">
                         ← Selectores CSS
                     </a>
 
                     <a href="../index.html"
-                        class="bg-gray-500 text-white px-6 py-3 rounded-lg hover:bg-gray-600 transition-colors">
+                        class="bg-gray-500 text-white px-6 py-3 rounded-lg hover:bg-gray-600 transition-colors flex items-center justify-center">
                         🏠 Menú Principal
                     </a>
 
                     <a href="bootstrap-vs-tailwind.html"
-                        class="bg-purple-500 text-white px-6 py-3 rounded-lg hover:bg-purple-600 transition-colors flex items-center">
+                        class="bg-purple-500 text-white px-6 py-3 rounded-lg hover:bg-purple-600 transition-colors flex items-center justify-center">
                         Bootstrap vs Tailwind →
                     </a>
                 </div>
