--- a/bootstrap/bootstrap-cdn.html
+++ b/bootstrap/bootstrap-cdn.html
@@ -44,27 +44,12 @@
             animation: fadeInUp 0.8s ease-out forwards;
         }
 
-        .code-block {
+        .code-editor {
             background: #1e1e1e;
-            border-radius: 8px;
-            padding: 1.5rem;
-            overflow-x: auto;
-        }
-
-        .copy-btn {
-            background: #4CAF50;
-            color: white;
-            border: none;
-            padding: 0.5rem 1rem;
-            border-radius: 4px;
-            cursor: pointer;
-            float: right;
-            margin-top: -10px;
-            margin-right: -10px;
-        }
-
-        .copy-btn:hover {
-            background: #45a049;
+            color: #d4d4d4;
+            font-family: 'Courier New', monospace;
+            border-bottom-left-radius: 10px;
+            border-bottom-right-radius: 10px;
         }
     </style>
 </head>
@@ -73,28 +58,31 @@
 
     <!-- Navigation -->
     <nav class="mb-4">
-        <div class="max-w-6xl mx-auto px-4 flex justify-between items-center">
+        <div
+            class="max-w-6xl mx-auto px-4 flex flex-col sm:flex-row justify-between items-stretch sm:items-center gap-2 sm:gap-0">
             <a href="../bootstrap/bootstrap-vs-tailwind.html"
-                class="bg-white text-purple-600 px-4 py-2 rounded-lg hover:bg-purple-50 transition-colors">
+                class="bg-white text-purple-600 px-4 py-2 rounded-lg hover:bg-purple-50 transition-colors text-center">
                 ← Bootstrap vs Tailwind
             </a>
             <a href="../bootstrap/clases-bootstrap.html"
-                class="bg-white text-purple-600 px-4 py-2 rounded-lg hover:bg-purple-50 transition-colors">
+                class="bg-white text-purple-600 px-4 py-2 rounded-lg hover:bg-purple-50 transition-colors text-center">
                 Clases Bootstrap →
             </a>
         </div>
     </nav>
 
-    <!-- Header -->
-    <div class="flex justify-center">
-        <div class="max-w-4xl w-full mx-auto px-4 bg-white rounded-2xl shadow-2xl p-8 m-10 text-center fade-in-left">
-            <h1 class="text-4xl font-bold text-gray-800 mb-4">🅱️ Integrar Bootstrap con CDN</h1>
-            <p class="text-xl text-gray-600"> La forma más rápida de empezar con Bootstrap</p>
-        </div>
-    </div>
-
-    <!-- Content -->
     <div class="max-w-4xl mx-auto px-4">
+
+        <!-- Header -->
+        <div class="flex justify-center">
+            <div
+                class="max-w-4xl w-full mx-auto px-4 bg-white rounded-2xl shadow-2xl p-8 m-10 text-center fade-in-left">
+                <h1 class="text-4xl font-bold text-gray-800 mb-4">🅱️ Integrar Bootstrap con CDN</h1>
+                <p class="text-xl text-gray-600"> La forma más rápida de empezar con Bootstrap</p>
+            </div>
+        </div>
+
+        <!-- Content -->
 
         <!-- ¿Qué es CDN? -->
         <div class="bg-white rounded-xl shadow-xl p-8 mb-8 fade-in-up">
@@ -146,17 +134,24 @@
                         rel="noopener">getbootstrap.com</a>
                     y copia los enlaces CDN más recientes:
                 </p>
-
-                <div class="relative">
-                    <button class="copy-btn" onclick="copyCode('bootstrap-links')">Copiar</button>
-                    <div class="code-block text-green-400 text-sm font-mono" id="bootstrap-links">
-                        <pre>&lt;!-- Bootstrap CSS --&gt;
-&lt;link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"&gt;
-
-&lt;!-- Bootstrap JavaScript (Opcional) --&gt;
-&lt;script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"&gt;&lt;/script&gt;</pre>
-                    </div>
+                <div class="bg-gray-800 px-4 py-2 text-gray-300 text-sm flex justify-between items-center">
+                    <span>📄 index.html</span>
+                    <button onclick="copyCode('bootstrap-links')"
+                        class="copy-btn bg-blue-600 text-white px-3 py-1 rounded text-xs hover:bg-blue-700 transition-colors">
+                        📋 Copiar
+                    </button>
                 </div>
+
+                <pre id="bootstrap-links"
+                    class="code-editor text-sm p-3 overflow-x-auto break-words break-all whitespace-pre-wrap">
+<span class="text-[#75715e]">&lt;!-- Bootstrap CSS --&gt;</span>
+<span class="text-[#f8f8f2]">&lt;link </span><span class="text-[#a6e22e]">href</span><span class="text-[#f8f8f2]">="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" </span><span class="text-[#a6e22e]">rel</span><span class="text-[#f8f8f2]">="stylesheet"&gt;</span>
+
+<span class="text-[#75715e]">&lt;!-- Bootstrap JavaScript (Opcional) --&gt;</span>
+<span class="text-[#f8f8f2]">&lt;script </span><span class="text-[#a6e22e]">src</span><span class="text-[#f8f8f2]">="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"&gt;&lt;/script&gt;</span>
+</pre>
+
+
             </div>
 
             <!-- Paso 2 -->
@@ -165,31 +160,33 @@
                 <p class="text-gray-600 mb-4">
                     Crea un archivo HTML con la estructura básica y los enlaces de Bootstrap:
                 </p>
-
-                <div class="relative">
-                    <button class="copy-btn" onclick="copyCode('html-structure')">Copiar</button>
-                    <div class="code-block text-green-400 text-sm font-mono" id="html-structure">
-                        <pre>&lt;!DOCTYPE html&gt;
-&lt;html lang="es"&gt;
-&lt;head&gt;
-  &lt;meta charset="UTF-8"&gt;
-  &lt;meta name="viewport" content="width=device-width, initial-scale=1.0"&gt;
-  &lt;title&gt;Mi sitio con Bootstrap&lt;/title&gt;
-  
-  &lt;!-- Bootstrap CSS --&gt;
-  &lt;link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"&gt;
-&lt;/head&gt;
-&lt;body&gt;
-  
-  &lt;!-- Tu contenido aquí --&gt;
-  &lt;h1&gt;¡Hola Bootstrap!&lt;/h1&gt;
-  
-  &lt;!-- Bootstrap JavaScript --&gt;
-  &lt;script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"&gt;&lt;/script&gt;
-&lt;/body&gt;
-&lt;/html&gt;</pre>
-                    </div>
+                <div class="bg-gray-800 px-4 py-2 text-gray-300 text-sm flex justify-between items-center">
+                    <span>📄 index.html</span>
+                    <button onclick="copyCode('html-structure')"
+                        class="copy-btn bg-blue-600 text-white px-3 py-1 rounded text-xs hover:bg-blue-700 transition-colors">
+                        📋 Copiar
+                    </button>
                 </div>
+
+                <pre id="html-structure"
+                    class="code-editor text-sm p-3 overflow-x-auto break-words break-all whitespace-pre-wrap">
+<span class="text-[#f8f8f2]">&lt;!DOCTYPE html&gt;</span>
+<span class="text-[#f8f8f2]">&lt;html <span class="text-[#a6e22e]">lang</span>=<span class="text-[#e6db74]">"es"</span>&gt;</span>
+<span class="text-[#f8f8f2]">  &lt;head&gt;</span>
+<span class="text-[#f8f8f2]">    &lt;meta <span class="text-[#a6e22e]">charset</span>=<span class="text-[#e6db74]">"UTF-8"</span>&gt;</span>
+<span class="text-[#f8f8f2]">    &lt;meta <span class="text-[#a6e22e]">name</span>=<span class="text-[#e6db74]">"viewport"</span> <span class="text-[#a6e22e]">content</span>=<span class="text-[#e6db74]">"width=device-width, initial-scale=1.0"</span>&gt;</span>
+<span class="text-[#f8f8f2]">    &lt;title&gt;<span class="text-[#f92672]">Mi sitio con Bootstrap</span>&lt;/title&gt;</span>
+<span class="text-[#75715e]">    &lt;!-- Bootstrap CSS --&gt;</span>
+<span class="text-[#f8f8f2]">    &lt;link <span class="text-[#a6e22e]">href</span>=<span class="text-[#e6db74]">"https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"</span> <span class="text-[#a6e22e]">rel</span>=<span class="text-[#e6db74]">"stylesheet"</span>&gt;</span>
+<span class="text-[#f8f8f2]">  &lt;/head&gt;</span>
+<span class="text-[#f8f8f2]">  &lt;body&gt;</span>
+<span class="text-[#75715e]">    &lt;!-- Tu contenido aquí --&gt;</span>
+<span class="text-[#f8f8f2]">    &lt;h1&gt;<span class="text-[#f92672]">¡Hola Bootstrap!</span>&lt;/h1&gt;</span>
+<span class="text-[#75715e]">    &lt;!-- Bootstrap JavaScript --&gt;</span>
+<span class="text-[#f8f8f2]">    &lt;script <span class="text-[#a6e22e]">src</span>=<span class="text-[#e6db74]">"https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"</span>&gt;&lt;/script&gt;</span>
+<span class="text-[#f8f8f2]">  &lt;/body&gt;</span>
+<span class="text-[#f8f8f2]">&lt;/html&gt;</span>
+</pre>
             </div>
 
             <!-- Paso 3 -->
@@ -217,8 +214,7 @@
         <!-- Clases Básicas -->
         <div class="bg-white rounded-xl shadow-xl p-8 mb-8 fade-in-up">
             <h2 class="text-3xl font-bold text-gray-800 mb-6 flex items-center">
-                <span class="text-4xl mr-3">🎯</span>
-                Clases Bootstrap Básicas
+                🎯Clases Bootstrap Básicas
             </h2>
 
             <div class="grid md:grid-cols-2 gap-6">
@@ -309,51 +305,51 @@
             </h2>
 
             <p class="text-gray-600 mb-4">Aquí tienes una página completa usando Bootstrap con CDN:</p>
-
-            <div class="relative">
-                <button class="copy-btn" onclick="copyCode('full-example')">Copiar</button>
-                <div class="code-block text-green-400 text-sm font-mono" id="full-example">
-                    <pre>&lt;!DOCTYPE html&gt;
-&lt;html lang="es"&gt;
-&lt;head&gt;
-  &lt;meta charset="UTF-8"&gt;
-  &lt;meta name="viewport" content="width=device-width, initial-scale=1.0"&gt;
-  &lt;title&gt;Mi Primera Página con Bootstrap&lt;/title&gt;
-  &lt;link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"&gt;
-&lt;/head&gt;
-&lt;body&gt;
-  
-  &lt;div class="container my-5"&gt;
-    &lt;div class="row"&gt;
-      &lt;div class="col-md-8 mx-auto"&gt;
-        
-        &lt;div class="card"&gt;
-          &lt;div class="card-header bg-primary text-white"&gt;
-            &lt;h1 class="card-title mb-0"&gt;¡Hola Bootstrap!&lt;/h1&gt;
-          &lt;/div&gt;
-          &lt;div class="card-body"&gt;
-            &lt;p class="card-text"&gt;Esta es mi primera página usando Bootstrap con CDN.&lt;/p&gt;
-            &lt;button class="btn btn-success"&gt;¡Genial!&lt;/button&gt;
-            &lt;button class="btn btn-outline-secondary ms-2"&gt;Aprender más&lt;/button&gt;
-          &lt;/div&gt;
-        &lt;/div&gt;
-        
-      &lt;/div&gt;
-    &lt;/div&gt;
-  &lt;/div&gt;
-  
-  &lt;script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"&gt;&lt;/script&gt;
-&lt;/body&gt;
-&lt;/html&gt;</pre>
-                </div>
+            <div class="bg-gray-800 px-4 py-2 text-gray-300 text-sm flex justify-between items-center">
+                <span>📄 index.html</span>
+                <button onclick="copyCode('full-example')"
+                    class="copy-btn bg-blue-600 text-white px-3 py-1 rounded text-xs hover:bg-blue-700 transition-colors">
+                    📋 Copiar
+                </button>
             </div>
+            <pre id="full-example"
+                class="code-editor text-sm p-3 overflow-x-auto break-words break-all whitespace-pre-wrap">
+<span class="text-[#f8f8f2]">&lt;!DOCTYPE html&gt;</span>
+<span class="text-[#f8f8f2]">&lt;html <span class="text-[#a6e22e]">lang</span>=<span class="text-[#e6db74]">"es"</span>&gt;</span>
+<span class="text-[#f8f8f2]">  &lt;head&gt;</span>
+<span class="text-[#f8f8f2]">    &lt;meta <span class="text-[#a6e22e]">charset</span>=<span class="text-[#e6db74]">"UTF-8"</span>&gt;</span>
+<span class="text-[#f8f8f2]">    &lt;meta <span class="text-[#a6e22e]">name</span>=<span class="text-[#e6db74]">"viewport"</span> <span class="text-[#a6e22e]">content</span>=<span class="text-[#e6db74]">"width=device-width, initial-scale=1.0"</span>&gt;</span>
+<span class="text-[#f8f8f2]">    &lt;title&gt;<span class="text-[#f92672]">Mi Primera Página con Bootstrap</span>&lt;/title&gt;</span>
+<span class="text-[#75715e]">    &lt;!-- Bootstrap CSS --&gt;</span>
+<span class="text-[#f8f8f2]">    &lt;link <span class="text-[#a6e22e]">href</span>=<span class="text-[#e6db74]">"https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"</span> <span class="text-[#a6e22e]">rel</span>=<span class="text-[#e6db74]">"stylesheet"</span>&gt;</span>
+<span class="text-[#f8f8f2]">  &lt;/head&gt;</span>
+<span class="text-[#f8f8f2]">  &lt;body&gt;</span>
+<span class="text-[#f8f8f2]">    &lt;div <span class="text-[#a6e22e]">class</span>=<span class="text-[#e6db74]">"container my-5"</span>&gt;</span>
+<span class="text-[#f8f8f2]">      &lt;div <span class="text-[#a6e22e]">class</span>=<span class="text-[#e6db74]">"row"</span>&gt;</span>
+<span class="text-[#f8f8f2]">        &lt;div <span class="text-[#a6e22e]">class</span>=<span class="text-[#e6db74]">"col-md-8 mx-auto"</span>&gt;</span>
+<span class="text-[#f8f8f2]">          &lt;div <span class="text-[#a6e22e]">class</span>=<span class="text-[#e6db74]">"card"</span>&gt;</span>
+<span class="text-[#f8f8f2]">            &lt;div <span class="text-[#a6e22e]">class</span>=<span class="text-[#e6db74]">"card-header bg-primary text-white"</span>&gt;</span>
+<span class="text-[#f8f8f2]">              &lt;h1 <span class="text-[#a6e22e]">class</span>=<span class="text-[#e6db74]">"card-title mb-0"</span>&gt;<span class="text-[#f92672]">¡Hola Bootstrap!</span>&lt;/h1&gt;</span>
+<span class="text-[#f8f8f2]">            &lt;/div&gt;</span>
+<span class="text-[#f8f8f2]">            &lt;div <span class="text-[#a6e22e]">class</span>=<span class="text-[#e6db74]">"card-body"</span>&gt;</span>
+<span class="text-[#f8f8f2]">              &lt;p <span class="text-[#a6e22e]">class</span>=<span class="text-[#e6db74]">"card-text"</span>&gt;<span class="text-[#f92672]">Esta es mi primera página usando Bootstrap con CDN.</span>&lt;/p&gt;</span>
+<span class="text-[#f8f8f2]">              &lt;button <span class="text-[#a6e22e]">class</span>=<span class="text-[#e6db74]">"btn btn-success"</span>&gt;<span class="text-[#f92672]">¡Genial!</span>&lt;/button&gt;</span>
+<span class="text-[#f8f8f2]">              &lt;button <span class="text-[#a6e22e]">class</span>=<span class="text-[#e6db74]">"btn btn-outline-secondary ms-2"</span>&gt;<span class="text-[#f92672]">Aprender más</span>&lt;/button&gt;</span>
+<span class="text-[#f8f8f2]">            &lt;/div&gt;</span>
+<span class="text-[#f8f8f2]">          &lt;/div&gt;</span>
+<span class="text-[#f8f8f2]">        &lt;/div&gt;</span>
+<span class="text-[#f8f8f2]">      &lt;/div&gt;</span>
+<span class="text-[#f8f8f2]">    &lt;/div&gt;</span>
+<span class="text-[#75715e]">    &lt;!-- Bootstrap JavaScript --&gt;</span>
+<span class="text-[#f8f8f2]">    &lt;script <span class="text-[#a6e22e]">src</span>=<span class="text-[#e6db74]">"https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"</span>&gt;&lt;/script&gt;</span>
+<span class="text-[#f8f8f2]">  &lt;/body&gt;</span>
+<span class="text-[#f8f8f2]">&lt;/html&gt;</span>
+</pre>
         </div>
-
         <!-- Consideraciones -->
         <div class="bg-white rounded-xl shadow-xl p-8 mb-8 fade-in-up">
             <h2 class="text-3xl font-bold text-gray-800 mb-6 flex items-center">
-                <span class="text-4xl mr-3">💡</span>
-                Consideraciones Importantes
+                💡Consideraciones Importantes
             </h2>
 
             <div class="space-y-6">
@@ -385,6 +381,7 @@
                 </div>
             </div>
         </div>
+    </div>
 
     </div>
     </div>
@@ -393,19 +390,19 @@
     <footer class="mt-16">
         <div class="max-w-6xl mx-auto px-4">
             <div class="bg-white rounded-xl shadow-xl p-6">
-                <div class="flex justify-between items-center">
+                <div class="flex flex-col sm:flex-row justify-between items-stretch gap-3">
                     <a href="bootstrap-vs-tailwind.html"
-                        class="bg-purple-500 text-white px-6 py-3 rounded-lg hover:bg-purple-600 transition-colors flex items-center">
+                        class="bg-purple-500 text-white px-6 py-3 rounded-lg hover:bg-purple-600 transition-colors flex items-center justify-center text-center w-full sm:w-auto">
                         ← Bootstrap vs Tailwind
                     </a>
 
                     <a href="../index.html"
-                        class="bg-gray-500 text-white px-6 py-3 rounded-lg hover:bg-gray-600 transition-colors">
+                        class="bg-gray-500 text-white px-6 py-3 rounded-lg hover:bg-gray-600 transition-colors flex items-center justify-center text-center w-full sm:w-auto">
                         🏠 Menú Principal
                     </a>
 
                     <a href="clases-bootstrap.html"
-                        class="bg-purple-500 text-white px-6 py-3 rounded-lg hover:bg-purple-600 transition-colors flex items-center">
+                        class="bg-purple-500 text-white px-6 py-3 rounded-lg hover:bg-purple-600 transition-colors flex items-center justify-center text-center w-full sm:w-auto">
                         Clases Bootstrap →
                     </a>
                 </div>
@@ -425,17 +422,20 @@
     <script>
         function copyCode(elementId) {
             const element = document.getElementById(elementId);
-            const text = element.textContent;
+            const textContent = element.textContent;
 
-            navigator.clipboard.writeText(text).then(() => {
-                const btn = element.parentElement.querySelector('.copy-btn');
-                const originalText = btn.textContent;
-                btn.textContent = '¡Copiado!';
-                btn.style.background = '#2196F3';
+            navigator.clipboard.writeText(textContent).then(() => {
+                // Cambiar texto del botón temporalmente
+                const button = element.parentElement.querySelector('.copy-btn');
+                const originalText = button.innerHTML;
+                button.innerHTML = '✅ ¡Copiado!';
+                button.classList.add('bg-green-600');
+                button.classList.remove('bg-blue-600');
 
                 setTimeout(() => {
-                    btn.textContent = originalText;
-                    btn.style.background = '#4CAF50';
+                    button.innerHTML = originalText;
+                    button.classList.remove('bg-green-600');
+                    button.classList.add('bg-blue-600');
                 }, 2000);
             });
         }
