--- a/bootstrap/clases-bootstrap.html
+++ b/bootstrap/clases-bootstrap.html
@@ -66,28 +66,29 @@
 
     <!-- Navigation -->
     <nav class="mb-4">
-        <div class="max-w-6xl mx-auto px-4 flex justify-between items-center">
+        <div class="max-w-6xl mx-auto px-4 flex flex-col sm:flex-row justify-between items-stretch sm:items-center gap-2 sm:gap-0">
             <a href="bootstrap-cdn.html"
-                class="bg-white text-purple-600 px-4 py-2 rounded-lg hover:bg-purple-50 transition-colors">
+                class="bg-white text-purple-600 px-4 py-2 rounded-lg hover:bg-purple-50 transition-colors text-center">
                 ← Integrar Bootstrap
             </a>
             <a href="ejercicio-bootstrap.html"
-                class="bg-white text-purple-600 px-4 py-2 rounded-lg hover:bg-purple-50 transition-colors">
+                class="bg-white text-purple-600 px-4 py-2 rounded-lg hover:bg-purple-50 transition-colors text-center">
                 Ejercicio Bootstrap →
             </a>
         </div>
     </nav>
 
+    <div class="max-w-6xl mx-auto px-4">
+
     <!-- Header -->
     <div class="flex justify-center">
-        <div class="max-w-6xl w-full bg-white rounded-2xl shadow-2xl p-8 m-10 text-center bounce-in">
+        <div class="max-w-6xl w-full mx-auto px-4 bg-white rounded-2xl shadow-2xl p-8 m-10 text-center bounce-in">
             <h1 class="text-4xl font-bold text-gray-800 mb-4">🅱️ Clases Bootstrap Básicas</h1>
             <p class="text-xl text-gray-600">Las clases esenciales que todo desarrollador debe conocer</p>
         </div>
     </div>
 
     <!-- Content -->
-    <div class="max-w-6xl mx-auto px-4">
 
         <!-- Container System -->
         <div class="bg-white rounded-xl shadow-xl p-8 mb-8 fade-in-up">
@@ -606,22 +607,22 @@
     <footer class="mt-16">
         <div class="max-w-6xl mx-auto px-4">
             <div class="bg-white rounded-xl shadow-xl p-6">
-                <div class="flex justify-between items-center">
-                    <a href="bootstrap-cdn.html"
-                        class="bg-purple-500 text-white px-6 py-3 rounded-lg hover:bg-purple-600 transition-colors flex items-center">
-                        ← Bootstrap CDN
-                    </a>
+            <div class="flex flex-col gap-3 sm:flex-row sm:justify-between sm:items-center">
+                <a href="bootstrap-cdn.html"
+                class="bg-purple-500 text-white px-6 py-3 rounded-lg hover:bg-purple-600 transition-colors flex items-center justify-center">
+                ← Bootstrap CDN
+                </a>
 
-                    <a href="../index.html"
-                        class="bg-gray-500 text-white px-6 py-3 rounded-lg hover:bg-gray-600 transition-colors">
-                        🏠 Menú Principal
-                    </a>
+                <a href="../index.html"
+                class="bg-gray-500 text-white px-6 py-3 rounded-lg hover:bg-gray-600 transition-colors flex items-center justify-center">
+                🏠 Menú Principal
+                </a>
 
-                    <a href="ejercicio-bootstrap.html"
-                        class="bg-purple-500 text-white px-6 py-3 rounded-lg hover:bg-purple-600 transition-colors flex items-center">
-                        Ejercicio Bootstrap →
-                    </a>
-                </div>
+                <a href="ejercicio-bootstrap.html"
+                class="bg-purple-500 text-white px-6 py-3 rounded-lg hover:bg-purple-600 transition-colors flex items-center justify-center">
+                Ejercicio Bootstrap →
+                </a>
+            </div>
             </div>
         </div>
 
