--- a/tailwind/clases-tailwind.html
+++ b/tailwind/clases-tailwind.html
@@ -39,11 +39,11 @@
   
   <!-- Navigation -->
   <nav class="mb-4">
-    <div class="max-w-6xl mx-auto px-4 flex justify-between items-center">
-      <a href="tailwind-cdn.html" class="bg-white text-purple-600 px-4 py-2 rounded-lg hover:bg-purple-50 transition-colors">
+    <div class="max-w-6xl mx-auto px-4 flex flex-col gap-2 sm:flex-row sm:justify-between sm:items-center">
+      <a href="tailwind-cdn.html" class="bg-white text-purple-600 px-4 py-2 rounded-lg hover:bg-purple-50 transition-colors w-full sm:w-auto text-center">
         ← Tailwind CDN
       </a>
-      <a href="ejercicio-tailwind.html" class="bg-white text-purple-600 px-4 py-2 rounded-lg hover:bg-purple-50 transition-colors">
+      <a href="ejercicio-tailwind.html" class="bg-white text-purple-600 px-4 py-2 rounded-lg hover:bg-purple-50 transition-colors w-full sm:w-auto text-center">
         Ejercicio Tailwind →
       </a>
     </div>
@@ -674,21 +674,21 @@ transition-colors    <!-- smooth color transitions --></pre>
   <footer class="mt-16">
     <div class="max-w-6xl mx-auto px-4">
       <div class="bg-white rounded-xl shadow-xl p-6">
-        <div class="flex justify-between items-center">
-          <a href="tailwind-cdn.html"
-            class="bg-purple-500 text-white px-6 py-3 rounded-lg hover:bg-purple-600 transition-colors flex items-center">
-            ← Tailwind CDN
-          </a>
+      <div class="flex flex-col gap-3 sm:flex-row sm:justify-between sm:items-center">
+        <a href="tailwind-cdn.html"
+        class="bg-purple-500 text-white px-6 py-3 rounded-lg hover:bg-purple-600 transition-colors flex items-center justify-center sm:w-auto w-full">
+        ← Tailwind CDN
+        </a>
 
-          <a href="../index.html" class="bg-gray-500 text-white px-6 py-3 rounded-lg hover:bg-gray-600 transition-colors">
-            🏠 Menú Principal
-          </a>
+        <a href="../index.html" class="bg-gray-500 text-white px-6 py-3 rounded-lg hover:bg-gray-600 transition-colors flex items-center justify-center sm:w-auto w-full">
+        🏠 Menú Principal
+        </a>
 
-          <a href="ejercicio-tailwind.html"
-            class="bg-purple-500 text-white px-6 py-3 rounded-lg hover:bg-purple-600 transition-colors flex items-center">
-            Ejercicio Tailwind →
-          </a>
-        </div>
+        <a href="ejercicio-tailwind.html"
+        class="bg-purple-500 text-white px-6 py-3 rounded-lg hover:bg-purple-600 transition-colors flex items-center justify-center sm:w-auto w-full">
+        Ejercicio Tailwind →
+        </a>
+      </div>
       </div>
     </div>
 
