--- a/bootstrap/ejercicio-bootstrap.html
+++ b/bootstrap/ejercicio-bootstrap.html
@@ -95,13 +95,13 @@
 
     <!-- Navigation -->
     <nav class="mb-8">
-        <div class="max-w-6xl mx-auto px-4 flex justify-between items-center">
+        <div class="max-w-6xl mx-auto px-4 flex flex-col sm:flex-row justify-between items-stretch sm:items-center gap-3">
             <a href="clases-bootstrap.html"
-                class="bg-white text-purple-600 px-4 py-2 rounded-lg hover:bg-purple-50 transition-colors">
+                class="bg-white text-purple-600 px-4 py-2 rounded-lg hover:bg-purple-50 transition-colors text-center w-full sm:w-auto">
                 ← Clases Bootstrap
             </a>
             <a href="../tailwind/tailwind-cdn.html"
-                class="bg-white text-purple-600 px-4 py-2 rounded-lg hover:bg-purple-50 transition-colors">
+                class="bg-white text-purple-600 px-4 py-2 rounded-lg hover:bg-purple-50 transition-colors text-center w-full sm:w-auto">
                 Tailwind CDN →
             </a>
         </div>
@@ -577,19 +577,19 @@
     <footer class="mt-16">
         <div class="max-w-6xl mx-auto px-4">
             <div class="bg-white rounded-xl shadow-xl p-6">
-                <div class="flex justify-between items-center">
+                <div class="flex flex-col sm:flex-row justify-between items-stretch gap-3">
                     <a href="clases-bootstrap.html"
-                        class="bg-purple-500 text-white px-6 py-3 rounded-lg hover:bg-purple-600 transition-colors flex items-center">
+                        class="bg-purple-500 text-white px-6 py-3 rounded-lg hover:bg-purple-600 transition-colors flex items-center justify-center text-center w-full sm:w-auto">
                         ← Clases Bootstrap
                     </a>
 
                     <a href="../index.html"
-                        class="bg-gray-500 text-white px-6 py-3 rounded-lg hover:bg-gray-600 transition-colors">
+                        class="bg-gray-500 text-white px-6 py-3 rounded-lg hover:bg-gray-600 transition-colors flex items-center justify-center text-center w-full sm:w-auto">
                         🏠 Menú Principal
                     </a>
 
                     <a href="../tailwind/tailwind-cdn.html"
-                        class="bg-purple-500 text-white px-6 py-3 rounded-lg hover:bg-purple-600 transition-colors flex items-center">
+                        class="bg-purple-500 text-white px-6 py-3 rounded-lg hover:bg-purple-600 transition-colors flex items-center justify-center text-center w-full sm:w-auto">
                         Tailwind CDN →
                     </a>
                 </div>
