--- a/tailwind/ejercicio-tailwind.html
+++ b/tailwind/ejercicio-tailwind.html
@@ -51,11 +51,11 @@
   
  <!-- Navigation -->
   <nav class="mb-8">
-    <div class="max-w-6xl mx-auto px-4 flex justify-between items-center">
-      <a href="clases-tailwind.html" class="bg-white text-purple-600 px-4 py-2 rounded-lg hover:bg-purple-50 transition-colors">
+    <div class="max-w-6xl mx-auto px-4 flex flex-col gap-3 sm:flex-row sm:justify-between sm:items-center">
+      <a href="clases-tailwind.html" class="bg-white text-purple-600 px-4 py-2 rounded-lg hover:bg-purple-50 transition-colors text-center">
         ← Clases Tailwind
       </a>
-      <div class="bg-gray-300 text-gray-500 px-4 py-2 rounded-lg opacity-50">
+      <div class="bg-gray-300 text-gray-500 px-4 py-2 rounded-lg opacity-50 text-center">
         (Último tema)
       </div>
     </div>
@@ -588,20 +588,20 @@
   <footer class="mt-16">
     <div class="max-w-6xl mx-auto px-4">
       <div class="bg-white rounded-xl shadow-xl p-6">
-        <div class="flex justify-between items-center">
-          <a href="clases-tailwind.html"
-            class="bg-purple-500 text-white px-6 py-3 rounded-lg hover:bg-purple-600 transition-colors flex items-center">
-            ← Clases Tailwind
-          </a>
+      <div class="flex flex-col gap-4 sm:flex-row sm:justify-between sm:items-center">
+        <a href="clases-tailwind.html"
+        class="bg-purple-500 text-white px-6 py-3 rounded-lg hover:bg-purple-600 transition-colors flex items-center justify-center">
+        ← Clases Tailwind
+        </a>
 
-          <a href="../index.html" class="bg-gray-500 text-white px-6 py-3 rounded-lg hover:bg-gray-600 transition-colors">
-            🏠 Menú Principal
-          </a>
+        <a href="../index.html" class="bg-gray-500 text-white px-6 py-3 rounded-lg hover:bg-gray-600 transition-colors flex items-center justify-center">
+        🏠 Menú Principal
+        </a>
 
-          <div class="bg-gray-300 text-gray-500 px-6 py-3 rounded-lg opacity-50">
-            (Último tema)
-          </div>
+        <div class="bg-gray-300 text-gray-500 px-6 py-3 rounded-lg opacity-50 text-center">
+        (Último tema)
         </div>
+      </div>
       </div>
     </div>
 
