--- a/bootstrap/que-es-framework.html
+++ b/bootstrap/que-es-framework.html
@@ -59,9 +59,9 @@
     <!-- Navigation -->
     <nav class="mb-8">
         <div class="max-w-6xl mx-auto px-4 flex flex-col gap-4 sm:flex-row sm:justify-between sm:items-center">
-            <a href="../css/selectores-css.html"
+            <a href="../html/tablas/ejercicios-practicos.html"
                 class="bg-white text-purple-600 px-4 py-2 rounded-lg hover:bg-purple-50 transition-colors text-center">
-                ← Selectores CSS
+                ← Ejercicios Prácticos (Tablas)
             </a>
             <a href="bootstrap-vs-tailwind.html"
                 class="bg-white text-purple-600 px-4 py-2 rounded-lg hover:bg-purple-50 transition-colors text-center">
@@ -79,8 +79,7 @@
         </div>
 
         <!-- Content -->
-        <div class="max-w-4xl mx-auto px-4">
-
+        
             <!-- Definición -->
             <div class="bg-white rounded-xl shadow-xl p-8 mb-8 fade-in-up">
                 <h2 class="text-3xl font-bold text-gray-800 mb-6 flex items-center">
@@ -256,7 +255,7 @@
                 </div>
             </div>
 
-        </div>
+        
     </div>
 
     <!-- Footer Navigation -->
@@ -264,9 +263,9 @@
         <div class="max-w-6xl mx-auto px-4">
             <div class="bg-white rounded-xl shadow-xl p-6">
                 <div class="flex flex-col gap-4 sm:flex-row sm:justify-between sm:items-center">
-                    <a href="../css/selectores-css.html"
+                    <a href="../html/tablas/ejercicios-practicos.html"
                         class="bg-purple-500 text-white px-6 py-3 rounded-lg hover:bg-purple-600 transition-colors flex items-center justify-center">
-                        ← Selectores CSS
+                        ← Ejercicios Prácticos (Tablas)
                     </a>
 
                     <a href="../index.html"
