--- a/css/historia-css.html
+++ b/css/historia-css.html
@@ -366,7 +366,7 @@ P {
       <div class="flex flex-col gap-3 sm:flex-row sm:justify-between sm:items-center">
         <a href="que-es-css.html"
         class="bg-violet-500 text-white px-6 py-3 rounded-lg hover:bg-violet-600 transition-colors flex items-center justify-center">
-        ← Tema Anterior
+        ← ¿Qué es CSS?
         </a>
 
         <a href="../index.html"
@@ -376,7 +376,7 @@ P {
 
         <a href="versiones-css.html"
         class="bg-violet-500 text-white px-6 py-3 rounded-lg hover:bg-violet-600 transition-colors flex items-center justify-center">
-        Siguiente Tema →
+        Versiones de CSS →
         </a>
       </div>
       </div>
