--- a/css/selectores-css.html
+++ b/css/selectores-css.html
@@ -73,9 +73,9 @@
         class="bg-white text-lime-600 px-4 py-2 rounded-lg hover:bg-lime-50 transition-colors w-full sm:w-auto text-center">
         ← Formas de Aplicar CSS
       </a>
-      <a href="../bootstrap/que-es-framework.html"
+      <a href="../html/tablas/que-son-tablas.html"
         class="bg-white text-lime-600 px-4 py-2 rounded-lg hover:bg-lime-50 transition-colors w-full sm:w-auto text-center">
-        Qué es un framework →
+        Tablas HTML →
       </a>
     </div>
   </nav>
@@ -792,9 +792,9 @@
             🏠 Menú Principal
           </a>
 
-          <a href="../bootstrap/que-es-framework.html"
+          <a href="../html/tablas/que-son-tablas.html"
             class="bg-lime-500 text-white px-6 py-3 rounded-lg hover:bg-lime-600 transition-colors flex items-center justify-center w-full sm:w-auto text-center">
-            ¿Qué es un framework? →
+            Tablas HTML →
           </a>
         </div>
       </div>
