--- a/html/tablas/tablas-responsivas.html
+++ b/html/tablas/tablas-responsivas.html
@@ -680,9 +680,37 @@
 
   </div>
 
-  <!-- Footer -->
-  <footer class="text-center text-white mt-16 pb-8">
-    <p class="text-sm opacity-75">© 2025 Escuela de Desarrollo. Aprende HTML paso a paso.</p>
+  <!-- Footer Navigation -->
+  <footer class="mt-16">
+    <div class="max-w-6xl mx-auto px-4">
+      <div class="bg-white rounded-xl shadow-xl p-6">
+        <div class="flex flex-col gap-3 sm:flex-row sm:justify-between sm:items-center">
+          <a href="estilos-css.html"
+            class="bg-lime-500 text-white px-6 py-3 rounded-lg hover:bg-lime-600 transition-colors flex items-center justify-center w-full sm:w-auto text-center">
+            ← Estilos CSS
+          </a>
+
+          <a href="../../index.html"
+            class="bg-gray-500 text-white px-6 py-3 rounded-lg hover:bg-gray-600 transition-colors flex items-center justify-center w-full sm:w-auto text-center">
+            🏠 Menú Principal
+          </a>
+
+          <a href="ejercicios-practicos.html"
+            class="bg-lime-500 text-white px-6 py-3 rounded-lg hover:bg-lime-600 transition-colors flex items-center justify-center w-full sm:w-auto text-center">
+            Ejercicios Prácticos →
+          </a>
+        </div>
+      </div>
+    </div>
+
+    <div class="text-center mt-8">
+      <p class="text-white text-lg">
+        📖 Aprende HTML paso a paso.
+      </p>
+      <p class="text-pink-100 mt-2">
+        CCL © Copyright 2025
+      </p>
+    </div>
   </footer>
 
 </body>
